Remove redundant notebook log handlers

--- a/notebooks/01_utils_logging.ipynb
+++ b/notebooks/01_utils_logging.ipynb
@@ -13,7 +13,7 @@
    "id": "1",
    "metadata": {},
    "source": [
-    "# 01 — Logging Utilities for Bronze and Silver Processing\n",
+    "# 01 \u2014 Logging Utilities for Bronze and Silver Processing\n",
     "\n",
     "This notebook defines the logging infrastructure for the data pipeline:\n",
     "\n",
@@ -79,11 +79,6 @@
     "import logging\n",
     "\n",
     "logger = logging.getLogger(__name__)\n",
-    "if not logger.handlers:\n",
-    "    handler = logging.StreamHandler()\n",
-    "    formatter = logging.Formatter(\"%(asctime)s %(levelname)s %(name)s - %(message)s\")\n",
-    "    handler.setFormatter(formatter)\n",
-    "    logger.addHandler(handler)\n",
     "logger.setLevel(logging.INFO)\n",
     "\n"
    ]
@@ -325,7 +320,7 @@
    "source": [
     "# Ensure logs schema exists\n",
     "spark.sql(f\"CREATE SCHEMA IF NOT EXISTS {LOG_SCHEMA}\")\n",
-    "logger.info(f\"✓ Schema '{LOG_SCHEMA}' ready\")\n",
+    "logger.info(f\"\u2713 Schema '{LOG_SCHEMA}' ready\")\n",
     "\n",
     "if not spark.catalog.tableExists(BRONZE_LOG_TABLE_FULLNAME):\n",
     "    empty_df = spark.createDataFrame([], bronze_processing_log_schema)\n",
@@ -357,7 +352,7 @@
     "         .mode(\"append\")   # of .mode(\"ignore\")\n",
     "         .saveAsTable(SILVER_SUMMARY_TABLE_FULLNAME))\n",
     "\n",
-    "logger.info(\"\\n✓ All log tables ready\")"
+    "logger.info(\"\\n\u2713 All log tables ready\")"
    ]
   },
   {
@@ -403,7 +398,7 @@
     "    return error_msg[:max_length] + \"... [TRUNCATED]\"\n",
     "\n",
     "\n",
-    "logger.info(\"✓ Helper functions defined\")"
+    "logger.info(\"\u2713 Helper functions defined\")"
    ]
   },
   {
@@ -475,7 +470,7 @@
     "       .mode(\"append\")\n",
     "       .saveAsTable(BRONZE_LOG_TABLE_FULLNAME))\n",
     "    \n",
-    "    logger.info(f\"✓ Logged {len(bronze_results)} Bronze records to {BRONZE_LOG_TABLE_FULLNAME}\")\n",
+    "    logger.info(f\"\u2713 Logged {len(bronze_results)} Bronze records to {BRONZE_LOG_TABLE_FULLNAME}\")\n",
     "\n",
     "def log_bronze_summary(summary: dict) -> str:\n",
     "    \"\"\"\n",
@@ -534,7 +529,7 @@
     "    return log_id\n",
     "\n",
     "\n",
-    "logger.info(\"✓ Bronze logging functions defined\")"
+    "logger.info(\"\u2713 Bronze logging functions defined\")"
    ]
   },
   {
@@ -611,7 +606,7 @@
     "       .mode(\"append\")\n",
     "       .saveAsTable(SILVER_LOG_TABLE_FULLNAME))\n",
     "    \n",
-    "    logger.info(f\"✓ Logged {len(records)} Silver records to {SILVER_LOG_TABLE_FULLNAME}\")\n",
+    "    logger.info(f\"\u2713 Logged {len(records)} Silver records to {SILVER_LOG_TABLE_FULLNAME}\")\n",
     "\n",
     "\n",
     "def log_silver_summary(summary: Dict[str, Any]) -> None:\n",
@@ -659,10 +654,10 @@
     "       .mode(\"append\")\n",
     "       .saveAsTable(SILVER_SUMMARY_TABLE_FULLNAME))\n",
     "    \n",
-    "    logger.info(f\"✓ Logged Silver summary to {SILVER_SUMMARY_TABLE_FULLNAME}\")\n",
+    "    logger.info(f\"\u2713 Logged Silver summary to {SILVER_SUMMARY_TABLE_FULLNAME}\")\n",
     "\n",
     "\n",
-    "logger.info(\"✓ Silver logging functions defined\")"
+    "logger.info(\"\u2713 Silver logging functions defined\")"
    ]
   },
   {
@@ -775,7 +770,7 @@
     "    return latest[0].asDict()\n",
     "\n",
     "\n",
-    "logger.info(\"✓ Query helper functions defined\")"
+    "logger.info(\"\u2713 Query helper functions defined\")"
    ]
   },
   {
@@ -808,16 +803,16 @@
     "\n",
     "# for table_name in tables_to_check:\n",
     "#     if not spark.catalog.tableExists(table_name):\n",
-    "#         logger.info(f\"✗ {table_name:<40} NOT FOUND\")\n",
+    "#         logger.info(f\"\u2717 {table_name:<40} NOT FOUND\")\n",
     "#         continue\n",
     "\n",
     "#     try:\n",
     "#         count = spark.table(table_name).count()\n",
-    "#         logger.info(f\"✓ {table_name:<40} {count:>10,} rows\")\n",
+    "#         logger.info(f\"\u2713 {table_name:<40} {count:>10,} rows\")\n",
     "#     except Exception as e:\n",
     "#         logger.info(f\"! {table_name:<40} ERROR: {type(e).__name__}: {e}\")\n",
     "\n",
-    "# logger.info(\"\\n✓ Logging infrastructure ready for Bronze and Silver processing\")"
+    "# logger.info(\"\\n\u2713 Logging infrastructure ready for Bronze and Silver processing\")"
    ]
   }
  ],
