--- a/notebooks/02_utils_config.ipynb
+++ b/notebooks/02_utils_config.ipynb
@@ -15,7 +15,7 @@
    "id": "1",
    "metadata": {},
    "source": [
-    "# 02 — Configuration Utilities for Bronze and Silver Processing\n",
+    "# 02 \u2014 Configuration Utilities for Bronze and Silver Processing\n",
     "\n",
     "This notebook provides configuration management for the data pipeline:\n",
     "\n",
@@ -70,14 +70,9 @@
     "import logging\n",
     "\n",
     "logger = logging.getLogger(__name__)\n",
-    "if not logger.handlers:\n",
-    "    handler = logging.StreamHandler()\n",
-    "    formatter = logging.Formatter(\"%(asctime)s %(levelname)s %(name)s - %(message)s\")\n",
-    "    handler.setFormatter(formatter)\n",
-    "    logger.addHandler(handler)\n",
     "logger.setLevel(logging.INFO)\n",
     "\n",
-    "logger.info(\"✓ Imports loaded\")"
+    "logger.info(\"\u2713 Imports loaded\")"
    ]
   },
   {
@@ -137,8 +132,8 @@
     "else:\n",
     "    env_type = 'Local/Relative'\n",
     "\n",
-    "logger.info(f\"✓ Base path: {BASE_PATH}\")\n",
-    "logger.info(f\"✓ Environment: {env_type}\")"
+    "logger.info(f\"\u2713 Base path: {BASE_PATH}\")\n",
+    "logger.info(f\"\u2713 Environment: {env_type}\")"
    ]
   },
   {
@@ -164,10 +159,10 @@
     "# Data paths\n",
     "DATA_BASE = f\"{BASE_PATH}/greenhouse_sources\"  # Default, can be overridden in DAG\n",
     "\n",
-    "logger.info(f\"✓ Config directory: {CONFIG_DIR}\")\n",
-    "logger.info(f\"✓ Watermarks path: {WATERMARKS_PATH}\")\n",
-    "logger.info(f\"✓ Runplan path: {RUNPLAN_PATH}\")\n",
-    "logger.info(f\"✓ Data base path: {DATA_BASE}\")"
+    "logger.info(f\"\u2713 Config directory: {CONFIG_DIR}\")\n",
+    "logger.info(f\"\u2713 Watermarks path: {WATERMARKS_PATH}\")\n",
+    "logger.info(f\"\u2713 Runplan path: {RUNPLAN_PATH}\")\n",
+    "logger.info(f\"\u2713 Data base path: {DATA_BASE}\")"
    ]
   },
   {
@@ -253,10 +248,10 @@
     "        if \"load_mode\" in table:\n",
     "            load_mode = table[\"load_mode\"].lower()\n",
     "            if load_mode not in valid_load_modes:\n",
-    "                logger.info(f\"⚠️  Warning: Table '{table['name']}' has unsupported load_mode: {load_mode}\")\n",
+    "                logger.info(f\"\u26a0\ufe0f  Warning: Table '{table['name']}' has unsupported load_mode: {load_mode}\")\n",
     "\n",
     "\n",
-    "logger.info(\"✓ DAG loading functions defined\")"
+    "logger.info(\"\u2713 DAG loading functions defined\")"
    ]
   },
   {
@@ -321,7 +316,7 @@
     "    found_names = {t[\"name\"] for t in filtered}\n",
     "    missing = retry_set - found_names\n",
     "    if missing:\n",
-    "        logger.info(f\"⚠️  Warning: Retry tables not found in DAG: {sorted(missing)}\")\n",
+    "        logger.info(f\"\u26a0\ufe0f  Warning: Retry tables not found in DAG: {sorted(missing)}\")\n",
     "    \n",
     "    return filtered\n",
     "\n",
@@ -378,7 +373,7 @@
     "    return tables\n",
     "\n",
     "\n",
-    "logger.info(\"✓ Table filtering functions defined\")"
+    "logger.info(\"\u2713 Table filtering functions defined\")"
    ]
   },
   {
@@ -458,8 +453,8 @@
     "    return source_wm.get(table_name)\n",
     "\n",
     "\n",
-    "logger.info(\"✓ Watermark functions defined (READ-ONLY)\")\n",
-    "logger.info(\"⚠️  NOTE: Watermarks are managed by extraction pipeline, not by notebooks\")"
+    "logger.info(\"\u2713 Watermark functions defined (READ-ONLY)\")\n",
+    "logger.info(\"\u26a0\ufe0f  NOTE: Watermarks are managed by extraction pipeline, not by notebooks\")"
    ]
   },
   {
@@ -528,7 +523,7 @@
     "    return f\"{default_schema}.{table_name}\"\n",
     "\n",
     "\n",
-    "logger.info(\"✓ Path building functions defined\")"
+    "logger.info(\"\u2713 Path building functions defined\")"
    ]
   },
   {
@@ -628,7 +623,7 @@
     "    }\n",
     "\n",
     "\n",
-    "logger.info(\"✓ DAG query helper functions defined\")"
+    "logger.info(\"\u2713 DAG query helper functions defined\")"
    ]
   },
   {
@@ -654,7 +649,7 @@
     "        List of scheduled runs\n",
     "    \"\"\"\n",
     "    if not os.path.exists(RUNPLAN_PATH):\n",
-    "        logger.info(f\"⚠️  Warning: Runplan file not found: {RUNPLAN_PATH}\")\n",
+    "        logger.info(f\"\u26a0\ufe0f  Warning: Runplan file not found: {RUNPLAN_PATH}\")\n",
     "        return []\n",
     "    \n",
     "    with open(RUNPLAN_PATH, 'r') as f:\n",
@@ -677,7 +672,7 @@
     "    return [entry for entry in runplan if entry.get(\"source\") == source]\n",
     "\n",
     "\n",
-    "logger.info(\"✓ Runplan functions defined\")"
+    "logger.info(\"\u2713 Runplan functions defined\")"
    ]
   },
   {
@@ -725,7 +720,7 @@
     "#     if len(dag_files) > 5:\n",
     "#         logger.info(f\"   ... and {len(dag_files) - 5} more\")\n",
     "\n",
-    "# logger.info(\"\\n✓ Configuration utilities ready\")"
+    "# logger.info(\"\\n\u2713 Configuration utilities ready\")"
    ]
   },
   {
@@ -778,7 +773,7 @@
     "#     watermark = get_table_watermark(metadata['source'], table['name'])\n",
     "#     logger.info(f\"Watermark for {table['name']}: {watermark}\")\n",
     "\n",
-    "#logger.info(\"✓ Example usage documented (commented out)\")"
+    "#logger.info(\"\u2713 Example usage documented (commented out)\")"
    ]
   }
  ],
