--- a/notebooks/11_bronze_watermark_merge.ipynb
+++ b/notebooks/11_bronze_watermark_merge.ipynb
@@ -13,7 +13,7 @@
    "id": "1",
    "metadata": {},
    "source": [
-    "# 11 — Bronze Watermark Merge\n",
+    "# 11 \u2014 Bronze Watermark Merge\n",
     "\n",
     "Merges watermark values from incremental load runtime files back into the central watermarks configuration.\n",
     "\n",
@@ -86,15 +86,10 @@
     "import logging\n",
     "\n",
     "logger = logging.getLogger(__name__)\n",
-    "if not logger.handlers:\n",
-    "    handler = logging.StreamHandler()\n",
-    "    formatter = logging.Formatter(\"%(asctime)s %(levelname)s %(name)s - %(message)s\")\n",
-    "    handler.setFormatter(formatter)\n",
-    "    logger.addHandler(handler)\n",
     "logger.setLevel(logging.INFO)\n",
     "\n",
     "\n",
-    "logger.info(\"✓ Imports loaded\")"
+    "logger.info(\"\u2713 Imports loaded\")"
    ]
   },
   {
@@ -121,8 +116,8 @@
     "\n",
     "BASE_PATH = detect_base_path()\n",
     "\n",
-    "logger.info(f\"✓ Base path: {BASE_PATH}\")\n",
-    "logger.info(f\"✓ Environment: {'Fabric' if '/lakehouse' in BASE_PATH else 'Local'}\")"
+    "logger.info(f\"\u2713 Base path: {BASE_PATH}\")\n",
+    "logger.info(f\"\u2713 Environment: {'Fabric' if '/lakehouse' in BASE_PATH else 'Local'}\")"
    ]
   },
   {
@@ -174,7 +169,7 @@
     "with open(wm_configpath_full, 'r') as f:\n",
     "    cfg = json.load(f)\n",
     "\n",
-    "logger.info(f\"✓ Loaded watermarks config\")"
+    "logger.info(f\"\u2713 Loaded watermarks config\")"
    ]
   },
   {
@@ -192,7 +187,7 @@
     "    raise ValueError(f\"Source '{source}' not found in watermarks config\")\n",
     "\n",
     "tables_map = src.get(\"tables\", {})\n",
-    "logger.info(f\"✓ Found source '{source}' with {len(tables_map)} table watermarks\")"
+    "logger.info(f\"\u2713 Found source '{source}' with {len(tables_map)} table watermarks\")"
    ]
   },
   {
@@ -215,11 +210,11 @@
    "source": [
     "# Check if runtime folder exists\n",
     "if not os.path.exists(wm_folder_full):\n",
-    "    logger.info(f\"⚠️  No watermark runtime folder found: {wm_folder_full}\")\n",
+    "    logger.info(f\"\u26a0\ufe0f  No watermark runtime folder found: {wm_folder_full}\")\n",
     "    logger.info(f\"   This is normal if no incremental tables were processed\")\n",
     "    updates = {}\n",
     "else:\n",
-    "    logger.info(f\"\\n📂 Reading watermark updates from: {wm_folder_full}\")\n",
+    "    logger.info(f\"\\n\ud83d\udcc2 Reading watermark updates from: {wm_folder_full}\")\n",
     "    updates = {}\n",
     "    \n",
     "    # List table folders\n",
@@ -237,7 +232,7 @@
     "            parquet_files = [f for f in os.listdir(table_path) if f.endswith('.parquet')]\n",
     "            \n",
     "            if not parquet_files:\n",
-    "                logger.info(f\"   ⚠️  {table_name}: No parquet files found\")\n",
+    "                logger.info(f\"   \u26a0\ufe0f  {table_name}: No parquet files found\")\n",
     "                continue\n",
     "            \n",
     "            # Read all parquets with PyArrow\n",
@@ -257,16 +252,16 @@
     "                if valid_watermarks:\n",
     "                    max_wm = max(valid_watermarks)\n",
     "                    updates[table_name] = max_wm\n",
-    "                    logger.info(f\"   ✓ {table_name}: {max_wm}\")\n",
+    "                    logger.info(f\"   \u2713 {table_name}: {max_wm}\")\n",
     "                else:\n",
-    "                    logger.info(f\"   ⚠️  {table_name}: No valid watermarks found\")\n",
+    "                    logger.info(f\"   \u26a0\ufe0f  {table_name}: No valid watermarks found\")\n",
     "            else:\n",
-    "                logger.info(f\"   ⚠️  {table_name}: No watermark column or empty table\")\n",
+    "                logger.info(f\"   \u26a0\ufe0f  {table_name}: No watermark column or empty table\")\n",
     "        \n",
     "        except Exception as e:\n",
-    "            logger.info(f\"   ⚠️  {table_name}: Error reading watermark - {str(e)[:80]}\")\n",
+    "            logger.info(f\"   \u26a0\ufe0f  {table_name}: Error reading watermark - {str(e)[:80]}\")\n",
     "    \n",
-    "    logger.info(f\"\\n✓ Found {len(updates)} watermark updates\")"
+    "    logger.info(f\"\\n\u2713 Found {len(updates)} watermark updates\")"
    ]
   },
   {
@@ -285,7 +280,7 @@
    "outputs": [],
    "source": [
     "if updates:\n",
-    "    logger.info(\"\\n🔍 Comparing old vs new watermarks:\")\n",
+    "    logger.info(\"\\n\ud83d\udd0d Comparing old vs new watermarks:\")\n",
     "    logger.info(f\"{'Table':<30} {'Old Watermark':<25} {'New Watermark':<25} {'Status':<15}\")\n",
     "    logger.info(\"-\" * 95)\n",
     "    \n",
@@ -293,15 +288,15 @@
     "        old_wm = tables_map.get(table)\n",
     "        \n",
     "        if old_wm == new_wm:\n",
-    "            status = \"✓ MATCH\"\n",
+    "            status = \"\u2713 MATCH\"\n",
     "        elif old_wm is None:\n",
-    "            status = \"🆕 NEW\"\n",
+    "            status = \"\ud83c\udd95 NEW\"\n",
     "        else:\n",
-    "            status = \"🔄 UPDATE\"\n",
+    "            status = \"\ud83d\udd04 UPDATE\"\n",
     "        \n",
     "        logger.info(f\"{table:<30} {str(old_wm):<25} {str(new_wm):<25} {status:<15}\")\n",
     "else:\n",
-    "    logger.info(\"\\nℹ️  No watermark updates to process\")"
+    "    logger.info(\"\\n\u2139\ufe0f  No watermark updates to process\")"
    ]
   },
   {
@@ -336,12 +331,12 @@
     "            \"old\": old_wm,\n",
     "            \"new\": new_wm\n",
     "        })\n",
-    "        logger.info(f\"  ✓ Updated {table}: {old_wm} → {new_wm}\")\n",
+    "        logger.info(f\"  \u2713 Updated {table}: {old_wm} \u2192 {new_wm}\")\n",
     "\n",
     "if changed > 0:\n",
-    "    logger.info(f\"\\n✓ {changed} watermark(s) will be updated\")\n",
+    "    logger.info(f\"\\n\u2713 {changed} watermark(s) will be updated\")\n",
     "else:\n",
-    "    logger.info(\"\\nℹ️  No watermark changes detected\")"
+    "    logger.info(\"\\n\u2139\ufe0f  No watermark changes detected\")"
    ]
   },
   {
@@ -365,7 +360,7 @@
    "outputs": [],
    "source": [
     "if changed > 0:\n",
-    "    logger.info(\"\\n💾 Saving updated watermarks config...\")\n",
+    "    logger.info(\"\\n\ud83d\udcbe Saving updated watermarks config...\")\n",
     "    \n",
     "    tmp_path = wm_configpath_full + \".tmp\"\n",
     "    \n",
@@ -374,28 +369,28 @@
     "        with open(tmp_path, 'w') as f:\n",
     "            json.dump(cfg, f, indent=2)\n",
     "        \n",
-    "        logger.info(f\"  ✓ Wrote temporary file: {tmp_path}\")\n",
+    "        logger.info(f\"  \u2713 Wrote temporary file: {tmp_path}\")\n",
     "        \n",
     "        # Atomic replace\n",
     "        os.replace(tmp_path, wm_configpath_full)\n",
     "        \n",
-    "        logger.info(f\"  ✓ Replaced original file: {wm_configpath_full}\")\n",
-    "        logger.info(\"\\n✓ Watermarks config saved successfully\")\n",
+    "        logger.info(f\"  \u2713 Replaced original file: {wm_configpath_full}\")\n",
+    "        logger.info(\"\\n\u2713 Watermarks config saved successfully\")\n",
     "        \n",
     "    except Exception as e:\n",
-    "        logger.info(f\"\\n✗ Failed to save config: {str(e)}\")\n",
+    "        logger.info(f\"\\n\u2717 Failed to save config: {str(e)}\")\n",
     "        \n",
     "        # Cleanup temp file if it exists\n",
     "        if os.path.exists(tmp_path):\n",
     "            try:\n",
     "                os.remove(tmp_path)\n",
-    "                logger.info(f\"  ✓ Cleaned up temporary file\")\n",
+    "                logger.info(f\"  \u2713 Cleaned up temporary file\")\n",
     "            except:\n",
     "                pass\n",
     "        \n",
     "        raise\n",
     "else:\n",
-    "    logger.info(\"\\nℹ️  No changes to save\")"
+    "    logger.info(\"\\n\u2139\ufe0f  No changes to save\")"
    ]
   },
   {
@@ -462,7 +457,7 @@
     "    mssparkutils.notebook.exit(result_json)\n",
     "except NameError:\n",
     "    # mssparkutils not available (local environment)\n",
-    "    logger.info(\"\\nℹ️  mssparkutils not available (local environment)\")\n",
+    "    logger.info(\"\\n\u2139\ufe0f  mssparkutils not available (local environment)\")\n",
     "    logger.info(\"   Notebook completed successfully\")"
    ]
   }
