--- a/notebooks/20_silver_cdc_merge.ipynb
+++ b/notebooks/20_silver_cdc_merge.ipynb
@@ -13,7 +13,7 @@
    "id": "1",
    "metadata": {},
    "source": [
-    "# 20 — Silver CDC Merge Worker\n",
+    "# 20 \u2014 Silver CDC Merge Worker\n",
     "\n",
     "This notebook performs Change Data Capture (CDC) merge from Bronze to Silver layer.\n",
     "\n",
@@ -24,19 +24,19 @@
     "Bronze incremental tables use **APPEND with run_ts partitioning**:\n",
     "```\n",
     "bronze.Dim_Relatie/\n",
-    "  ├── _bronze_load_ts=20251101T060000/  -- 1000 rows (initial)\n",
-    "  ├── _bronze_load_ts=20251108T060000/  -- 50 rows (delta)\n",
-    "  └── _bronze_load_ts=20251115T060000/  -- 100 rows (delta)\n",
+    "  \u251c\u2500\u2500 _bronze_load_ts=20251101T060000/  -- 1000 rows (initial)\n",
+    "  \u251c\u2500\u2500 _bronze_load_ts=20251108T060000/  -- 50 rows (delta)\n",
+    "  \u2514\u2500\u2500 _bronze_load_ts=20251115T060000/  -- 100 rows (delta)\n",
     "```\n",
     "\n",
     "Silver CDC merge:\n",
     "1. **Reconstruct current Bronze state** (latest row per business key)\n",
     "2. **Calculate row hash** for change detection\n",
     "3. **Compare with Silver**:\n",
-    "   - Keys in Bronze but not Silver → **INSERT**\n",
-    "   - Keys in both with different hash → **UPDATE**\n",
-    "   - Keys in Silver but not Bronze → **DELETE** (marked as deleted)\n",
-    "   - Keys in both with same hash → **UNCHANGED**\n",
+    "   - Keys in Bronze but not Silver \u2192 **INSERT**\n",
+    "   - Keys in both with different hash \u2192 **UPDATE**\n",
+    "   - Keys in Silver but not Bronze \u2192 **DELETE** (marked as deleted)\n",
+    "   - Keys in both with same hash \u2192 **UNCHANGED**\n",
     "\n",
     "## Key Features\n",
     "\n",
@@ -99,11 +99,6 @@
     "import logging\n",
     "\n",
     "logger = logging.getLogger(__name__)\n",
-    "if not logger.handlers:\n",
-    "    handler = logging.StreamHandler()\n",
-    "    formatter = logging.Formatter(\"%(asctime)s %(levelname)s %(name)s - %(message)s\")\n",
-    "    handler.setFormatter(formatter)\n",
-    "    logger.addHandler(handler)\n",
     "logger.setLevel(logging.INFO)\n",
     "\n",
     "\n",
@@ -113,12 +108,12 @@
     "\n",
     "try:\n",
     "    from hash_utils import add_row_hash, compare_hash_differences\n",
-    "    logger.info(\"✓ hash_utils imported successfully\")\n",
+    "    logger.info(\"\u2713 hash_utils imported successfully\")\n",
     "except ImportError as e:\n",
-    "    logger.info(f\"⚠️  Warning: Could not import hash_utils: {e}\")\n",
+    "    logger.info(f\"\u26a0\ufe0f  Warning: Could not import hash_utils: {e}\")\n",
     "    logger.info(\"   Make sure modules/hash_utils.py is in sys.path\")\n",
     "\n",
-    "logger.info(\"✓ Imports loaded\")"
+    "logger.info(\"\u2713 Imports loaded\")"
    ]
   },
   {
@@ -196,7 +191,7 @@
     "    ]\n",
     "\n",
     "\n",
-    "logger.info(\"✓ Helper functions defined\")"
+    "logger.info(\"\u2713 Helper functions defined\")"
    ]
   },
   {
@@ -581,7 +576,7 @@
     "    }\n",
     "\n",
     "\n",
-    "logger.info(\"✓ Silver CDC merge function defined\")"
+    "logger.info(\"\u2713 Silver CDC merge function defined\")"
    ]
   },
   {
@@ -630,15 +625,15 @@
     "logger.info(\"=\" * 80)\n",
     "logger.info(\"\\nFunction available: process_silver_cdc_merge(table_def, source_name, run_ts, ...)\")\n",
     "logger.info(\"\\nCDC Capabilities:\")\n",
-    "logger.info(\"  ✓ INSERT detection (new keys)\")\n",
-    "logger.info(\"  ✓ UPDATE detection (changed rows via hash)\")\n",
-    "logger.info(\"  ✓ DELETE detection (missing keys from Bronze)\")\n",
-    "logger.info(\"  ✓ UNCHANGED tracking (same hash)\")\n",
-    "logger.info(\"\\n⚠️  Remember to:\")\n",
+    "logger.info(\"  \u2713 INSERT detection (new keys)\")\n",
+    "logger.info(\"  \u2713 UPDATE detection (changed rows via hash)\")\n",
+    "logger.info(\"  \u2713 DELETE detection (missing keys from Bronze)\")\n",
+    "logger.info(\"  \u2713 UNCHANGED tracking (same hash)\")\n",
+    "logger.info(\"\\n\u26a0\ufe0f  Remember to:\")\n",
     "logger.info(\"  1. Set RUN_ID before calling function\")\n",
     "logger.info(\"  2. Ensure business_keys defined in table config\")\n",
     "logger.info(\"  3. Run Bronze load successfully first\")\n",
-    "logger.info(\"\\n✓ Silver CDC merge notebook loaded successfully\")"
+    "logger.info(\"\\n\u2713 Silver CDC merge notebook loaded successfully\")"
    ]
   }
  ],
