--- a/notebooks/00_master_orchestrator.ipynb
+++ b/notebooks/00_master_orchestrator.ipynb
@@ -13,7 +13,7 @@
    "id": "1",
    "metadata": {},
    "source": [
-    "# 00 — Master Orchestrator: Bronze → Silver Processing\n",
+    "# 00 \u2014 Master Orchestrator: Bronze \u2192 Silver Processing\n",
     "\n",
     "Main orchestration notebook for processing parquet files through Bronze and Silver layers.\n",
     "\n",
@@ -21,23 +21,23 @@
     "\n",
     "```\n",
     "Parquet Files (Files/{source}/{run_ts}/)\n",
-    "    ↓\n",
+    "    \u2193\n",
     "Bronze Layer (append with run_ts for CDC)\n",
-    "    ↓\n",
+    "    \u2193\n",
     "Silver Layer (CDC merge: INSERT/UPDATE/DELETE)\n",
-    "    ↓\n",
+    "    \u2193\n",
     "Watermark Update (incremental tables only)\n",
     "```\n",
     "\n",
     "## Process Flow\n",
     "\n",
     "1. **Load Configuration** (DAG, enabled tables, retry filter)\n",
-    "2. **Check Incremental** → Run watermark merge if needed\n",
-    "3. **Bronze Processing** → Parallel table loading (10 workers)\n",
-    "4. **Bronze Logging** → Batch log all results\n",
-    "5. **Silver Processing** → Parallel CDC merge (tables with business_keys)\n",
-    "6. **Silver Logging** → Batch log all results\n",
-    "7. **Summary Statistics** → Performance metrics, efficiency\n",
+    "2. **Check Incremental** \u2192 Run watermark merge if needed\n",
+    "3. **Bronze Processing** \u2192 Parallel table loading (10 workers)\n",
+    "4. **Bronze Logging** \u2192 Batch log all results\n",
+    "5. **Silver Processing** \u2192 Parallel CDC merge (tables with business_keys)\n",
+    "6. **Silver Logging** \u2192 Batch log all results\n",
+    "7. **Summary Statistics** \u2192 Performance metrics, efficiency\n",
     "\n",
     "## Key Features\n",
     "\n",
@@ -102,11 +102,6 @@
     "import logging\n",
     "\n",
     "logger = logging.getLogger(__name__)\n",
-    "if not logger.handlers:\n",
-    "    handler = logging.StreamHandler()\n",
-    "    formatter = logging.Formatter(\"%(asctime)s %(levelname)s %(name)s - %(message)s\")\n",
-    "    handler.setFormatter(formatter)\n",
-    "    logger.addHandler(handler)\n",
     "logger.setLevel(logging.INFO)\n",
     "\n",
     "logger.info(\"=\"*80)\n",
@@ -152,7 +147,7 @@
     "# For local environments, create it\n",
     "try:\n",
     "    spark\n",
-    "    logger.info(\"✓ Spark session already available\")\n",
+    "    logger.info(\"\u2713 Spark session already available\")\n",
     "except NameError:\n",
     "    logger.info(\"Creating Spark session for local environment...\")\n",
     "    from pyspark.sql import SparkSession\n",
@@ -162,7 +157,7 @@
     "        .enableHiveSupport() \\\n",
     "        .getOrCreate()\n",
     "    \n",
-    "    logger.info(\"✓ Spark session created\")\n",
+    "    logger.info(\"\u2713 Spark session created\")\n",
     "\n",
     "spark.conf.set(\"spark.sql.parquet.datetimeRebaseModeInRead\", \"CORRECTED\")\n",
     "spark.conf.set(\"spark.sql.parquet.int96RebaseModeInRead\", \"CORRECTED\")\n",
@@ -210,9 +205,9 @@
    "outputs": [],
    "source": [
     "# Load and validate DAG\n",
-    "logger.info(f\"\\n📋 Loading DAG configuration...\")\n",
+    "logger.info(f\"\\n\ud83d\udccb Loading DAG configuration...\")\n",
     "dag = load_dag(dag_path)\n",
-    "logger.info(f\"✓ DAG loaded: {dag.get('source')}\")\n",
+    "logger.info(f\"\u2713 DAG loaded: {dag.get('source')}\")\n",
     "\n",
     "# Get metadata\n",
     "dag_metadata = get_dag_metadata(dag)\n",
@@ -248,7 +243,7 @@
     "\n",
     "logger.info(\"Schemas ensured: %s\", \", \".join(sorted(schemas)))\n",
     "\n",
-    "logger.info(f\"\\n📊 Tables to process: {len(tables_to_process)}\")\n",
+    "logger.info(f\"\\n\ud83d\udcca Tables to process: {len(tables_to_process)}\")\n",
     "\n",
     "# Show summary\n",
     "dag_summary = summarize_dag(dag)\n",
@@ -256,7 +251,7 @@
     "logger.info(f\"  Load modes: {dag_summary['load_mode_counts']}\")\n",
     "\n",
     "if not tables_to_process:\n",
-    "    logger.info(\"\\n⚠️  No tables to process. Exiting.\")\n",
+    "    logger.info(\"\\n\u26a0\ufe0f  No tables to process. Exiting.\")\n",
     "    raise SystemExit(0)"
    ]
   },
@@ -278,7 +273,7 @@
     "# Generate unique run ID\n",
     "RUN_ID = f\"{run_ts}_{uuid4().hex[:8]}\"\n",
     "run_date = build_run_date(run_ts)\n",
-    "logger.info(f\"\\n🆔 Run ID: {RUN_ID}\")"
+    "logger.info(f\"\\n\ud83c\udd94 Run ID: {RUN_ID}\")"
    ]
   },
   {
@@ -299,7 +294,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logger.info(f\"\\n💧 Checking for incremental tables...\")\n",
+    "logger.info(f\"\\n\ud83d\udca7 Checking for incremental tables...\")\n",
     "\n",
     "# Filter incremental tables\n",
     "incremental_tables = get_tables_by_load_mode(tables_to_process, \"incremental\")\n",
@@ -319,10 +314,10 @@
     "    \n",
     "    # Note: In Fabric, this would use mssparkutils.notebook.run()\n",
     "    # For local testing, we skip watermark merge (not critical for Bronze/Silver testing)\n",
-    "    logger.info(f\"\\n  ⚠️  Watermark merge would run here (11_bronze_watermark_merge.ipynb)\")\n",
+    "    logger.info(f\"\\n  \u26a0\ufe0f  Watermark merge would run here (11_bronze_watermark_merge.ipynb)\")\n",
     "    logger.info(f\"     Skipping for now - watermarks managed by extraction pipeline\")\n",
     "else:\n",
-    "    logger.info(f\"  ◯ No incremental tables - skipping watermark merge\")\n",
+    "    logger.info(f\"  \u25ef No incremental tables - skipping watermark merge\")\n",
     "\n",
     "logger.info(\"=\"*80)"
    ]
@@ -347,7 +342,7 @@
     "# Load Bronze worker notebook\n",
     "%run \"./notebooks/10_bronze_load.ipynb\"\n",
     "\n",
-    "logger.info(\"✓ Bronze worker loaded\")"
+    "logger.info(\"\u2713 Bronze worker loaded\")"
    ]
   },
   {
@@ -384,7 +379,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logger.info(f\"\\n🔵 BRONZE: Loading parquet to Delta tables...\")\n",
+    "logger.info(f\"\\n\ud83d\udd35 BRONZE: Loading parquet to Delta tables...\")\n",
     "logger.info(f\"  Workers: {max_workers}\")\n",
     "logger.info(f\"  Tables: {len(tables_to_process)}\")\n",
     "\n",
@@ -393,7 +388,7 @@
     "\n",
     "# Filter tables if not force_reload (check logs)\n",
     "if not force_reload:\n",
-    "    logger.info(f\"\\n  📋 Checking logs for already processed tables...\")\n",
+    "    logger.info(f\"\\n  \ud83d\udccb Checking logs for already processed tables...\")\n",
     "    \n",
     "    # Get successfully processed tables from log\n",
     "    processed_tables = get_successful_tables(run_ts, layer=\"bronze\")\n",
@@ -412,12 +407,12 @@
     "        tables_to_process_bronze = tables_to_process\n",
     "else:\n",
     "    tables_to_process_bronze = tables_to_process\n",
-    "    logger.info(f\"  ⚠️  Force reload enabled - processing all tables\")\n",
+    "    logger.info(f\"  \u26a0\ufe0f  Force reload enabled - processing all tables\")\n",
     "\n",
     "if not tables_to_process_bronze:\n",
-    "    logger.info(f\"\\n  ✓ All tables already processed for this run_ts\")\n",
+    "    logger.info(f\"\\n  \u2713 All tables already processed for this run_ts\")\n",
     "else:\n",
-    "    logger.info(f\"\\n  🚀 Processing {len(tables_to_process_bronze)} tables in parallel...\\n\")\n",
+    "    logger.info(f\"\\n  \ud83d\ude80 Processing {len(tables_to_process_bronze)} tables in parallel...\\n\")\n",
     "    \n",
     "    # Wrapper function for parallel execution\n",
     "    def process_table_wrapper(table_def):\n",
@@ -470,7 +465,7 @@
     "            completed += 1\n",
     "            \n",
     "            # Progress indicator\n",
-    "            status_icon = \"✓\" if result['status'] == 'SUCCESS' else \"✗\" if result['status'] == 'FAILED' else \"◯\"\n",
+    "            status_icon = \"\u2713\" if result['status'] == 'SUCCESS' else \"\u2717\" if result['status'] == 'FAILED' else \"\u25ef\"\n",
     "            # Kort foutfragment erbij (max 120 chars, 1 regel)\n",
     "            error_snippet = (result.get(\"error_message\") or \"\")[:120].replace(\"\\n\", \" \")\n",
     "            \n",
@@ -483,7 +478,7 @@
     "bronze_end = datetime.now(timezone.utc)\n",
     "bronze_duration = float((bronze_end - bronze_start).total_seconds())\n",
     "\n",
-    "logger.info(f\"\\n✓ Bronze processing completed in {bronze_duration}s\")\n",
+    "logger.info(f\"\\n\u2713 Bronze processing completed in {bronze_duration}s\")\n",
     "\n",
     "#sys.exit(0)"
    ]
@@ -504,7 +499,7 @@
    "outputs": [],
    "source": [
     "if bronze_results:\n",
-    "    logger.info(f\"\\n📊 Logging Bronze results...\")\n",
+    "    logger.info(f\"\\n\ud83d\udcca Logging Bronze results...\")\n",
     "        \n",
     "    # Calculate summary statistics\n",
     "    success_count = sum(1 for r in bronze_results if r['status'] == 'SUCCESS')\n",
@@ -562,9 +557,9 @@
     "    logger.info(f\"    Efficiency: {efficiency_pct:.1f}%\")\n",
     "    \n",
     "    if failed_tables:\n",
-    "        logger.info(f\"\\n  ⚠️  Failed tables: {failed_tables}\")\n",
+    "        logger.info(f\"\\n  \u26a0\ufe0f  Failed tables: {failed_tables}\")\n",
     "else:\n",
-    "    logger.info(f\"\\n  ℹ️  No Bronze results to log\")\n",
+    "    logger.info(f\"\\n  \u2139\ufe0f  No Bronze results to log\")\n",
     "\n",
     "#sys.exit(0)"
    ]
@@ -617,7 +612,7 @@
     "# Load Silver worker notebook\n",
     "%run \"./notebooks/20_silver_cdc_merge.ipynb\"\n",
     "\n",
-    "logger.info(\"✓ Silver CDC merge worker loaded\")\n",
+    "logger.info(\"\u2713 Silver CDC merge worker loaded\")\n",
     "sys.exit(0)"
    ]
   },
@@ -628,7 +623,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logger.info(f\"\\n🔷 SILVER: CDC merge from Bronze...\")\n",
+    "logger.info(f\"\\n\ud83d\udd37 SILVER: CDC merge from Bronze...\")\n",
     "\n",
     "# Filter tables for Silver processing:\n",
     "# 1. Must have business_keys defined\n",
@@ -648,11 +643,11 @@
     "silver_results = []\n",
     "\n",
     "if not tables_for_silver:\n",
-    "    logger.info(f\"\\n  ℹ️  No tables to process in Silver\")\n",
+    "    logger.info(f\"\\n  \u2139\ufe0f  No tables to process in Silver\")\n",
     "else:\n",
     "    silver_start = datetime.now(timezone.utc)\n",
     "    \n",
-    "    logger.info(f\"\\n  🚀 Processing {len(tables_for_silver)} tables in parallel...\\n\")\n",
+    "    logger.info(f\"\\n  \ud83d\ude80 Processing {len(tables_for_silver)} tables in parallel...\\n\")\n",
     "    \n",
     "    # Wrapper function for parallel execution\n",
     "    def process_silver_wrapper(table_def):\n",
@@ -700,7 +695,7 @@
     "            silver_results.append(result)\n",
     "            completed += 1\n",
     "            \n",
-    "            status_icon = \"✓\" if result['status'] == 'SUCCESS' else \"✗\"\n",
+    "            status_icon = \"\u2713\" if result['status'] == 'SUCCESS' else \"\u2717\"\n",
     "            deletes = result.get('rows_deleted', 0) or 0\n",
     "            delete_info = f\" ({deletes} deleted)\" if deletes > 0 else \"\"\n",
     "            logger.info(f\"    [{completed}/{len(tables_for_silver)}] {status_icon} {result['table_name']:<30} {result['status']:<10}{delete_info}\")\n",
@@ -709,7 +704,7 @@
     "    silver_end = datetime.now(timezone.utc)\n",
     "    silver_duration = int((silver_end - silver_start).total_seconds())\n",
     "    \n",
-    "    logger.info(f\"\\n✓ Silver processing completed in {silver_duration}s\")"
+    "    logger.info(f\"\\n\u2713 Silver processing completed in {silver_duration}s\")"
    ]
   },
   {
@@ -728,7 +723,7 @@
    "outputs": [],
    "source": [
     "if silver_results:\n",
-    "    logger.info(f\"\\n📊 Logging Silver results...\")\n",
+    "    logger.info(f\"\\n\ud83d\udcca Logging Silver results...\")\n",
     "    \n",
     "    # Batch log\n",
     "    log_silver_batch(silver_results)\n",
@@ -775,9 +770,9 @@
     "        logger.info(f\"    CDC: +{total_inserts or 0} ~{total_updates or 0} -{total_deletes}\")\n",
     "    \n",
     "    if failed_tables:\n",
-    "        logger.info(f\"\\n  ⚠️  Failed tables: {failed_tables}\")\n",
+    "        logger.info(f\"\\n  \u26a0\ufe0f  Failed tables: {failed_tables}\")\n",
     "else:\n",
-    "    logger.info(f\"\\n  ℹ️  No Silver results to log\")"
+    "    logger.info(f\"\\n  \u2139\ufe0f  No Silver results to log\")"
    ]
   },
   {
@@ -814,9 +809,9 @@
     "if bronze_results:\n",
     "    bronze_success = sum(1 for r in bronze_results if r['status'] == 'SUCCESS')\n",
     "    bronze_failed = sum(1 for r in bronze_results if r['status'] == 'FAILED')\n",
-    "    logger.info(f\"  ✓ Success: {bronze_success}/{len(bronze_results)}\")\n",
+    "    logger.info(f\"  \u2713 Success: {bronze_success}/{len(bronze_results)}\")\n",
     "    if bronze_failed > 0:\n",
-    "        logger.info(f\"  ✗ Failed:  {bronze_failed}\")\n",
+    "        logger.info(f\"  \u2717 Failed:  {bronze_failed}\")\n",
     "else:\n",
     "    logger.info(f\"  (No processing)\")\n",
     "\n",
@@ -824,9 +819,9 @@
     "if silver_results:\n",
     "    silver_success = sum(1 for r in silver_results if r['status'] == 'SUCCESS')\n",
     "    silver_failed = sum(1 for r in silver_results if r['status'] == 'FAILED')\n",
-    "    logger.info(f\"  ✓ Success: {silver_success}/{len(silver_results)}\")\n",
+    "    logger.info(f\"  \u2713 Success: {silver_success}/{len(silver_results)}\")\n",
     "    if silver_failed > 0:\n",
-    "        logger.info(f\"  ✗ Failed:  {silver_failed}\")\n",
+    "        logger.info(f\"  \u2717 Failed:  {silver_failed}\")\n",
     "else:\n",
     "    logger.info(f\"  (No processing)\")\n",
     "\n",
@@ -847,10 +842,10 @@
     "logger.info(\"=\"*80)\n",
     "\n",
     "if overall_status != \"SUCCESS\":\n",
-    "    logger.info(f\"\\n⚠️  Some tables failed. Check logs for details.\")\n",
+    "    logger.info(f\"\\n\u26a0\ufe0f  Some tables failed. Check logs for details.\")\n",
     "    logger.info(f\"   Use retry_tables parameter to retry specific tables.\")\n",
     "else:\n",
-    "    logger.info(f\"\\n✓ All processing completed successfully!\")"
+    "    logger.info(f\"\\n\u2713 All processing completed successfully!\")"
    ]
   }
  ],
