Fix name format in logging output

--- a/notebooks/00_master_orchestrator.ipynb
+++ b/notebooks/00_master_orchestrator.ipynb
@@ -152,6 +152,7 @@
     "    logger.info(\"Creating Spark session for local environment...\")\n",
     "    from pyspark.sql import SparkSession\n",
     "    \n",
+    "    #todo: use spark_config.py and override spark defaults. Enable Hive support is needed.\n",
     "    spark = SparkSession.builder \\\n",
     "        .appName(\"DWH_Bronze_Silver_Processing\") \\\n",
     "        .enableHiveSupport() \\\n",
