Enabled logging to console

--- a/notebooks/00_master_orchestrator.ipynb
+++ b/notebooks/00_master_orchestrator.ipynb
@@ -74,9 +74,10 @@
     "run_ts = \"20251001T183103260\"                       # Run timestamp\n",
     "dag_path = \"config/dag_anva_meeus_week.json\"        # DAG configuration path\n",
     "retry_tables = None                                 # Optional: list of table names to retry\n",
-    "force_reload = True                                # If True, ignore logs and reload all\n",
+    "force_reload = True                                 # If True, ignore logs and reload all\n",
     "max_workers = 10                                    # Parallel workers for table processing\n",
-    "debug = True                                        # Enable debug output"
+    "debug = True                                        # Enable debug output\n",
+    "log_to_console = True                               # Also stream logs to stdout/stderr\n"
    ]
   },
   {
@@ -99,10 +100,13 @@
     "from typing import List, Dict, Any\n",
     "import json\n",
     "from uuid import uuid4\n",
+    "from modules.logging_utils import configure_logging\n",
     "import logging\n",
     "\n",
+    "log_file = configure_logging(run_name=\"master_orchestrator\", enable_console_logging=log_to_console)\n",
     "logger = logging.getLogger(__name__)\n",
     "logger.setLevel(logging.INFO)\n",
+    "logger.info(\"Logfile: %s\", log_file)\n",
     "\n",
     "logger.info(\"=\"*80)\n",
     "logger.info(\"MASTER ORCHESTRATOR STARTING\")\n",
@@ -114,7 +118,7 @@
     "logger.info(f\"Force reload: {force_reload}\")\n",
     "logger.info(f\"Max workers: {max_workers}\")\n",
     "logger.info(f\"Debug: {debug}\")\n",
-    "logger.info(\"=\"*80)"
+    "logger.info(\"=\"*80)\n"
    ]
   },
   {
