Refactor notebook logging helpers

--- a/notebooks/10_bronze_load.ipynb
+++ b/notebooks/10_bronze_load.ipynb
@@ -13,7 +13,7 @@
    "id": "1",
    "metadata": {},
    "source": [
-    "# 10 — Bronze Load Worker\n",
+    "# 10 \u2014 Bronze Load Worker\n",
     "\n",
     "This notebook defines the worker function that loads a **single table** from parquet into a Bronze Delta table.\n",
     "\n",
@@ -87,7 +87,7 @@
     "logger = logging.getLogger(__name__)\n",
     "logger.setLevel(logging.INFO)\n",
     "\n",
-    "logger.info(\"✓ Imports loaded\")"
+    "logger.info(\"\u2713 Imports loaded\")"
    ]
   },
   {
@@ -103,13 +103,13 @@
     "try:\n",
     "    # Als 02_utils_config al gedraaid heeft, staat BASE_PATH al in de globals\n",
     "    BASE_PATH  # type: ignore[name-defined]\n",
-    "    logger.info(f\"✓ Base path (bronze worker): {BASE_PATH}\")\n",
+    "    logger.info(f\"\u2713 Base path (bronze worker): {BASE_PATH}\")\n",
     "    env_type = (\n",
     "        \"Fabric\" if \"/lakehouse/default/Files\" in BASE_PATH\n",
     "        else \"Custom Cluster\" if \"/data/lakehouse/\" in BASE_PATH\n",
     "        else \"Cluster/Relative\"\n",
     "    )\n",
-    "    logger.info(f\"✓ Environment (bronze worker): {env_type}\")\n",
+    "    logger.info(f\"\u2713 Environment (bronze worker): {env_type}\")\n",
     "except NameError:\n",
     "    # Fallback zodat je 10_bronze_load ook stand-alone kunt draaien\n",
     "    import glob\n",
@@ -143,8 +143,8 @@
     "        else \"Custom Cluster\" if \"/data/lakehouse/\" in BASE_PATH\n",
     "        else \"Local/Relative\"\n",
     "    )\n",
-    "    logger.info(f\"✓ Base path (bronze worker – fallback): {BASE_PATH}\")\n",
-    "    logger.info(f\"✓ Environment (bronze worker – fallback): {env_type}\")\n"
+    "    logger.info(f\"\u2713 Base path (bronze worker \u2013 fallback): {BASE_PATH}\")\n",
+    "    logger.info(f\"\u2713 Environment (bronze worker \u2013 fallback): {env_type}\")\n"
    ]
   },
   {
@@ -206,7 +206,7 @@
     "\n",
     "\n",
     "\n",
-    "logger.info(\"✓ Helper functions defined\")"
+    "logger.info(\"\u2713 Helper functions defined\")"
    ]
   },
   {
@@ -588,7 +588,7 @@
     "    }\n",
     "\n",
     "\n",
-    "logger.info(\"✓ Bronze worker function defined\")"
+    "logger.info(\"\u2713 Bronze worker function defined\")"
    ]
   },
   {
@@ -622,7 +622,9 @@
     "    results.append(result)\n",
     "\n",
     "# Log results in batch\n",
-    "log_bronze_batch(results)\n",
+    "bronze_summary = {...}  # build from results when ready\n",
+    "run_log_id = log_summary(bronze_summary, layer=\"bronze\")\n",
+    "log_batch(results, layer=\"bronze\", run_log_id=run_log_id)\n",
     "```"
    ]
   },
@@ -639,8 +641,8 @@
     "logger.info(f\"Base path: {BASE_PATH}\")\n",
     "logger.info(f\"Environment: {'Fabric' if '/lakehouse' in BASE_PATH else 'Local'}\")\n",
     "logger.info(\"\\nFunction available: process_bronze_table(table_def, source_name, run_ts, ...)\")\n",
-    "logger.info(\"\\n⚠️  Remember to set RUN_ID before calling process_bronze_table()\")\n",
-    "logger.info(\"✓ Bronze worker notebook loaded successfully\")"
+    "logger.info(\"\\n\u26a0\ufe0f  Remember to set RUN_ID before calling process_bronze_table()\")\n",
+    "logger.info(\"\u2713 Bronze worker notebook loaded successfully\")"
    ]
   }
  ],
